# 20242-team-4

./: CMakeLists.txt  Message_Style.h  README.md  UNutricionista.cpp  UNutricionista.h  UPadrao.cpp  UPadrao.h  UPersonal.cpp  UPersonal.h  UPessoa.cpp  UPessoa.h  UProfissional.cpp  UProfissional.h  competicao.cpp  competicao.h  janela_adiciona_exercicio.cpp  janela_adiciona_exercicio.h  janela_adiciona_prato.cpp  janela_adiciona_prato.h  janela_cadastro.cpp  janela_cadastro.h  janela_cadastro.ui  janela_checkins.cpp  janela_checkins.ui  janela_competicao.h  janela_criar_upadrao.h  janela_criar_upadrao.ui  janela_criar_uprofissional.cpp  janela_criar_uprofissional.ui  janela_dieta_usuario.cpp  janela_dieta_usuario.h  janela_dieta_usuario.ui  janela_edita_usuario.cpp  janela_edita_usuario.ui  janela_editar_dieta.cpp  janela_editar_dieta.h  janela_editar_treino.cpp  janela_editar_treino.h  janela_editar_treino.ui  janela_entrar_competicao.h  (+23 more)
BD/: bd.db
Instalador/: Tutorial.txt
TFinal/: conexao.cpp  conexao.h  janela_adiciona_atividade.cpp  janela_adiciona_atividade.h  janela_adiciona_atividade.ui  janela_adiciona_edicao.cpp  janela_adiciona_edicao.h  janela_adiciona_edicao.ui  janela_adiciona_exercicio.ui  janela_adiciona_prato.ui  janela_cadastro.ui  janela_checkins.h  janela_competicao.cpp  janela_competicao.ui  janela_criar_upadrao.cpp  janela_criar_upadrao.ui  janela_criar_uprofissional.h  janela_dieta_usuario.ui  janela_edita_usuario.h  janela_editar_dieta.cpp  janela_editar_dieta.h  janela_editar_dieta.ui  janela_entrar_competicao.cpp  janela_inicial.h  janela_login.cpp  janela_login.h  janela_login.ui  janela_menu_inicial.cpp  janela_menu_inicial.h  janela_menu_nutricionista.cpp  janela_menu_nutricionista.ui  janela_menu_personal.cpp  janela_menu_personal.h  janela_menu_personal.ui  janela_perfil_usuario.cpp  janela_perfil_usuario.h  janela_perfil_usuario.ui  janela_primeiro_login.ui  janela_profissional_usuario.cpp  janela_profissional_usuario.h  (+8 more)
TFinal/BD/: bd.db
